# ComfyUI-Patcher

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  windows-build.yml
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  deps.rs  errors.rs  execution.rs  git.rs  github.rs  lib.rs  main.rs  models.rs  process.rs  registry.rs  state.rs  util.rs
src/components/: ManagerRegistryBrowser.tsx  OperationPanel.tsx  RepoCard.tsx
tests/: README.md
