[package]
name = "comfyui-patcher"
version = "0.1.0"
description = "Desktop patcher for ComfyUI and custom nodes"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "comfyui_patcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", default-features = false, features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.146"
tauri = { version = "=2.10.3", default-features = false, features = ["wry"] }
thiserror = "2"
tokio = { version = "=1.42.0", features = ["process", "rt-multi-thread", "macros", "sync", "time", "fs"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
